[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://Scene/OtherScene/AfterLevelEnd.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://05yl3k6grhng" path="res://Art/BackPack/28.png" id="2"]
[ext_resource type="FontFile" uid="uid://bicgw4numqquw" path="res://Font/HYZhuZiMeiXinTiW.ttf" id="3"]
[ext_resource type="Texture2D" uid="uid://t8l066v8xryp" path="res://Art/game_pic/679.PNG" id="4"]
[ext_resource type="FontFile" uid="uid://ond0o3n8a00i" path="res://Font/华康宋体W3.ttc" id="5"]
[ext_resource type="Texture2D" uid="uid://dnruq566a8bo1" path="res://Art/MagicWeapon/220.png" id="6"]
[ext_resource type="Texture2D" uid="uid://eqob07i5mlve" path="res://Art/MagicWeapon/222.png" id="7"]

[node name="AfterLevelEnd" type="Node2D"]
script = ExtResource( "1" )
metadata/_edit_lock_ = true

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(477, 274)
scale = Vector2(1.17949, 1.14694)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="MoreInfo" type="Label" parent="BG"]
offset_left = -65.0
offset_top = -193.0
offset_right = 75.0
offset_bottom = -154.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 35
text = "更多信息"
metadata/_edit_lock_ = true

[node name="fgx_1" type="Sprite2D" parent="BG"]
position = Vector2(-105, -175)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="fgx_2" type="Sprite2D" parent="BG"]
position = Vector2(90, -175)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="Warning" type="Label" parent="BG"]
offset_left = -291.0
offset_top = 160.0
offset_right = 300.0
offset_bottom = 185.0
theme_override_colors/font_color = Color(1, 0.568627, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.568627, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource( "5" )
text = "注：以上数据为直接伤害数据，可能略有误差，仅供参考！！"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 112.0
offset_top = 99.0
offset_right = 1032.0
offset_bottom = 585.0
scale = Vector2(0.8, 0.8)
theme_override_constants/separation = 80
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TotalHitCount" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.32549, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.32549, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 25
text = "累计攻击次数："

[node name="TotalHit" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 25
text = "累计造成伤害："

[node name="Totalphyhit" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.615686, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.615686, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 25
text = "累计造成物伤："

[node name="Totalmaghit" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.427451, 0.898039, 1)
theme_override_colors/font_outline_color = Color(0, 0.427451, 0.898039, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 25
text = "累计造成魔伤："

[node name="TotalRealHit" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.545098, 0.545098, 0.545098, 1)
theme_override_colors/font_outline_color = Color(0.545098, 0.545098, 0.545098, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 25
text = "累计造成真伤："

[node name="TotalCritCount" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.741176, 0.341176, 0.309804, 1)
theme_override_colors/font_outline_color = Color(0.741176, 0.341176, 0.309804, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 25
text = "累计暴击次数："

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TotalHurtCount" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.462745, 0.290196, 0, 1)
theme_override_colors/font_outline_color = Color(0.462745, 0.290196, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 25
text = "累计受伤次数："

[node name="TotalHurt" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.517647, 0.537255, 0.815686, 1)
theme_override_colors/font_outline_color = Color(0.517647, 0.537255, 0.815686, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 25
text = "累计受到伤害："

[node name="TotalPhyHurt" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.466667, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.466667, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 25
text = "累计受到物伤："

[node name="TotalMagHurt" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.376471, 0.184314, 0.815686, 1)
theme_override_colors/font_outline_color = Color(0.376471, 0.184314, 0.815686, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 25
text = "累计受到魔伤："

[node name="TotalRealHurt" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_colors/font_outline_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 25
text = "累计受到真伤："

[node name="TotalMissCount" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 25
text = "累计闪避次数："

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TotalCure" type="Label" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.431373, 1, 0.368627, 1)
theme_override_colors/font_outline_color = Color(0.431373, 1, 0.368627, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 25
text = "累计治疗数值："

[node name="Glose" type="TextureButton" parent="."]
offset_left = 819.0
offset_top = 7.0
offset_right = 860.0
offset_bottom = 48.0
texture_normal = ExtResource( "6" )
texture_pressed = ExtResource( "6" )
texture_hover = ExtResource( "7" )
texture_disabled = ExtResource( "6" )
metadata/_edit_lock_ = true

[connection signal="pressed" from="Glose" to="." method="_on_glose_pressed" flags=18]
